[package]
name = "seam-carving"
version = "1.0.0"
authors = ["Friz64 <friz64mc@gmail.com>", "DasEtwas"]
edition = "2018"

[features]
default = ["fastimage_debug", "imagers"]
fastimage_debug = []
imagers = []

[dependencies]
image = "0.22.3"
gifski = "0.9.3"
rayon = "1.3.0"
imgref = "1.4.0"
rgb = "0.8.16"
num_cpus = "1.12.0"
parking_lot = "0.10.0"
clap = "2.33.0"
crossbeam-channel = "0.4.0"